--- a/lection_5/index.html
+++ b/lection_5/index.html
@@ -56,7 +56,7 @@
       //   },
       //   countProduct: function () {
       //     if (product.count > 0) {
-      //       console.log("Вы можете купиьть данный товар");
+      //       console.log("Вы можете купить данный товар");
       //     } else {
       //       console.log("Данный товар нельзя добавить в корзину");
       //     }
